--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "pg-promise": "^11.5.4"
+    "pg-promise": "^11.5.4",
+    "validator": "^13.11.0"
   }
 }
