--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "pg:init": "psql -U postgres -f db/schema.sql"
+    "pg:init": "psql -U postgres -f db/schema.sql",
+    "pg:alt": "psql -U postgres -f db/AltSchema.sql"
   },
   "nodemonConfig": {
     "ignore": [
@@ -26,8 +27,13 @@
     "express-ws": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.11",
     "nodemon": "^2.0.22",
     "pg-promise": "^11.5.4",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
