--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon server.js",
     "pg:init": "psql -U postgres -f db/schema.sql"
   },
+  "engines": {
+    "node": ">18.0.0"
+  },
   "nodemonConfig": {
     "ignore": [
       "./search_data"
