--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2",
+    "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.11",
     "nodemon": "^2.0.22",
     "pg-promise": "^11.5.4",
+    "punycode": "^2.3.1",
+    "redis": "^4.7.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
